Bug 231585. A view can only be treated as having a uniform background if that background is not translucent. r+sr=dbaron,a=choffman